Enum statut_reservation_enum {
  EN_ATTENTE
  CONFIRMEE
  ANNULEE
  REMBOURSEE
}

Enum statut_billet_enum {
  EMIS
  ANNULE
  UTILISE
  REMBOURSE
}

Enum statut_paiement_enum {
  EN_ATTENTE
  VALIDE
  REFUSE
}

Table status_vol {
  id int [pk]
  libelle varchar
  description text
}

Table classe_siege {
  id int [pk]
  libelle varchar
  description text
}

Table type_client {
  id int [pk]
  libelle varchar
  description text
  mode_calcul varchar
}

Table role_equipage {
  id int [pk]
  libelle varchar
  description text
}

Table model_avion {
  id int [pk]
  designation varchar
  fabricant varchar
  capacite int
}

Table etat_avion {
  id int [pk]
  libelle varchar
  description text
}

Table avion {
  id int [pk]
  code_avion varchar
  capacite_totale int
  model_avion_id int
  etat_avion_id int
}

Table siege {
  id int [pk]
  numero_siege varchar
  classe_siege_id int
  avion_id int
}

Table equipage {
  id int [pk]
  nom varchar
  prenom varchar
  role_id int
}

Table aeroport {
  id int [pk]
  code_aeroport varchar
  nom varchar
  ville varchar
  pays varchar
}

Table ligne_vol {
  id int [pk]
  numero_vol varchar
  aeroport_depart_id int
  aeroport_arrivee_id int
  duree_estimee_minutes int
  distance_km int
}

Table vol_opere {
  id int [pk]
  ligne_vol_id int
  avion_id int
  date_heure_depart timestamp
  date_heure_arrivee timestamp
  status_id int
}

Table prix_vol {
  id int [pk]
  vol_opere_id int
  classe_siege_id int
  type_client_id int
  prix_base decimal
  pourcentage_base decimal
}

Table siege_vol {
  id int [pk]
  vol_opere_id int
  siege_id int
  statut varchar
}

Table vol_opere_equipage {
  id int [pk]
  vol_opere_id int
  equipage_id int
}

Table client {
  id int [pk]
  nom varchar
  prenom varchar
  email varchar
  telephone varchar
  date_naissance date
  adresse text
  type_client_id int
}

Table reservation {
  id int [pk]
  client_id int
  vol_opere_id int
  statut statut_reservation_enum
}

Table billet {
  id int [pk]
  reservation_id int
  siege_vol_id int
  prix decimal
  statut statut_billet_enum
}

Table methode_paiement {
  id int [pk]
  libelle varchar
  description text
}

Table paiement {
  id int [pk]
  reservation_id int
  montant decimal
  statut statut_paiement_enum
}

Table paiement_methode {
  id int [pk]
  paiement_id int
  methode_paiement_id int
  montant decimal
}

Table maintenance_avion {
  id int [pk]
  avion_id int
  date_debut timestamp
  date_fin timestamp
}

Table societe {
  id int [pk]
  nom varchar
}

Table diffusion {
  id int [pk]
  idSociete int
  idVolOpere int
  nombre int
  dateDiff timestamp
}

Table prixDiffusion {
  id int [pk]
  idSociete int
  valeur decimal
  datePrixDiff timestamp
}

Table paiementDiff {
  id int [pk]
  idDiffusion int
  montant decimal
  datePaiement timestamp
}

Table paiement_diff_methode {
  id int [pk]
  paiement_diff_id int
  methode_paiement_id int
  montant decimal
}

Ref: avion.model_avion_id > model_avion.id
Ref: avion.etat_avion_id > etat_avion.id

Ref: siege.classe_siege_id > classe_siege.id
Ref: siege.avion_id > avion.id

Ref: equipage.role_id > role_equipage.id

Ref: ligne_vol.aeroport_depart_id > aeroport.id
Ref: ligne_vol.aeroport_arrivee_id > aeroport.id

Ref: vol_opere.ligne_vol_id > ligne_vol.id
Ref: vol_opere.avion_id > avion.id
Ref: vol_opere.status_id > status_vol.id

Ref: prix_vol.vol_opere_id > vol_opere.id
Ref: prix_vol.classe_siege_id > classe_siege.id
Ref: prix_vol.type_client_id > type_client.id

Ref: siege_vol.vol_opere_id > vol_opere.id
Ref: siege_vol.siege_id > siege.id

Ref: vol_opere_equipage.vol_opere_id > vol_opere.id
Ref: vol_opere_equipage.equipage_id > equipage.id

Ref: client.type_client_id > type_client.id

Ref: reservation.client_id > client.id
Ref: reservation.vol_opere_id > vol_opere.id

Ref: billet.reservation_id > reservation.id
Ref: billet.siege_vol_id > siege_vol.id

Ref: paiement.reservation_id > reservation.id

Ref: paiement_methode.paiement_id > paiement.id
Ref: paiement_methode.methode_paiement_id > methode_paiement.id

Ref: maintenance_avion.avion_id > avion.id

Ref: diffusion.idSociete > societe.id
Ref: diffusion.idVolOpere > vol_opere.id

Ref: prixDiffusion.idSociete > societe.id

Ref: paiementDiff.idDiffusion > diffusion.id

Ref: paiement_diff_methode.paiement_diff_id > paiementDiff.id
Ref: paiement_diff_methode.methode_paiement_id > methode_paiement.id
